--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>2023</name>
+	<name>Movie_Reservation</name>
 	<comment></comment>
 	<projects>
 	</projects>
